--- a/patches/ref_omap2plus_defconfig
+++ b/patches/ref_omap2plus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 6.3.1 Kernel Configuration
+# Linux/arm 6.4.0-rc1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="arm-linux-gnueabi-gcc (GCC) 12.2.0"
 CONFIG_CC_IS_GCC=y
@@ -15,7 +15,7 @@ CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
-CONFIG_PAHOLE_VERSION=0
+CONFIG_PAHOLE_VERSION=124
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_TABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
@@ -126,7 +126,6 @@ CONFIG_CPU_ISOLATION=y
 #
 CONFIG_TREE_RCU=y
 # CONFIG_RCU_EXPERT is not set
-CONFIG_SRCU=y
 CONFIG_TREE_SRCU=y
 CONFIG_NEED_SRCU_NMI_SAFE=y
 CONFIG_RCU_STALL_COMMON=y
@@ -138,7 +137,6 @@ CONFIG_IKCONFIG_PROC=y
 # CONFIG_IKHEADERS is not set
 CONFIG_LOG_BUF_SHIFT=16
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
-CONFIG_PRINTK_SAFE_LOG_BUF_SHIFT=13
 # CONFIG_PRINTK_INDEX is not set
 CONFIG_GENERIC_SCHED_CLOCK=y
 
@@ -181,7 +179,6 @@ CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 # CONFIG_CHECKPOINT_RESTORE is not set
 # CONFIG_SCHED_AUTOGROUP is not set
-# CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
@@ -350,13 +347,11 @@ CONFIG_MACH_OMAP2_TUSB6010=y
 CONFIG_MACH_NOKIA_N810=y
 CONFIG_MACH_NOKIA_N810_WIMAX=y
 CONFIG_MACH_NOKIA_N8X0=y
-# CONFIG_OMAP3_SDRC_AC_TIMING is not set
 # end of TI OMAP2/3/4 Specific Features
 
 # CONFIG_OMAP5_ERRATA_801819 is not set
 # end of TI OMAP/AM/DM/DRA Family
 
-# CONFIG_ARCH_OXNAS is not set
 # CONFIG_ARCH_QCOM is not set
 # CONFIG_ARCH_RDA is not set
 # CONFIG_ARCH_REALTEK is not set
@@ -507,7 +502,7 @@ CONFIG_HIGHPTE=y
 CONFIG_CPU_SW_DOMAIN_PAN=y
 CONFIG_HW_PERF_EVENTS=y
 CONFIG_ARM_MODULE_PLTS=y
-CONFIG_ARCH_FORCE_MAX_ORDER=12
+CONFIG_ARCH_FORCE_MAX_ORDER=11
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_PARAVIRT is not set
@@ -669,6 +664,7 @@ CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_PERF_REGS=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
+CONFIG_MMU_LAZY_TLB_REFCOUNT=y
 CONFIG_ARCH_HAVE_NMI_SAFE_CMPXCHG=y
 CONFIG_ARCH_WANT_IPC_PARSE_VERSION=y
 CONFIG_HAVE_ARCH_SECCOMP=y
@@ -727,6 +723,7 @@ CONFIG_FUNCTION_ALIGNMENT=0
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
+# CONFIG_MODULE_DEBUG is not set
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
@@ -839,7 +836,6 @@ CONFIG_ZSMALLOC_CHAIN_SIZE=8
 #
 CONFIG_SLAB=y
 # CONFIG_SLUB is not set
-# CONFIG_SLOB_DEPRECATED is not set
 CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
 # CONFIG_SLAB_FREELIST_HARDENED is not set
@@ -874,6 +870,7 @@ CONFIG_ARCH_HAS_CURRENT_STACK_POINTER=y
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_PERCPU_STATS is not set
 # CONFIG_GUP_TEST is not set
+# CONFIG_DMAPOOL_TEST is not set
 CONFIG_KMAP_LOCAL=y
 CONFIG_KMAP_LOCAL_NON_LINEAR_PTE_ARRAY=y
 # CONFIG_ANON_VMA_NAME is not set
@@ -911,6 +908,7 @@ CONFIG_XFRM_MIGRATE=y
 # CONFIG_XFRM_STATISTICS is not set
 CONFIG_NET_KEY=y
 CONFIG_NET_KEY_MIGRATE=y
+CONFIG_NET_HANDSHAKE=y
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 # CONFIG_IP_ADVANCED_ROUTER is not set
@@ -1327,6 +1325,7 @@ CONFIG_NET_SWITCHDEV=y
 # CONFIG_QRTR is not set
 # CONFIG_NET_NCSI is not set
 CONFIG_PCPU_DEV_REFCNT=y
+CONFIG_MAX_SKB_FRAGS=17
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_SOCK_RX_QUEUE_MAPPING=y
@@ -1408,6 +1407,7 @@ CONFIG_BT_MRVL_SDIO=m
 # CONFIG_BT_MTKSDIO is not set
 # CONFIG_BT_MTKUART is not set
 # CONFIG_BT_VIRTIO is not set
+# CONFIG_BT_NXPUART is not set
 # end of Bluetooth device drivers
 
 CONFIG_AF_RXRPC=m
@@ -1498,42 +1498,42 @@ CONFIG_VGA_ARB_MAX_GPUS=16
 #
 # PCI controller drivers
 #
+# CONFIG_PCIE_ALTERA is not set
 # CONFIG_PCI_FTPCI100 is not set
 # CONFIG_PCI_HOST_GENERIC is not set
-# CONFIG_PCIE_XILINX is not set
-# CONFIG_PCI_V3_SEMI is not set
-# CONFIG_PCIE_ALTERA is not set
 # CONFIG_PCIE_MICROCHIP_HOST is not set
+# CONFIG_PCI_V3_SEMI is not set
+# CONFIG_PCIE_XILINX is not set
 
 #
-# DesignWare PCI Core Support
-#
-CONFIG_PCIE_DW=y
-CONFIG_PCIE_DW_HOST=y
-CONFIG_PCIE_DW_EP=y
-CONFIG_PCI_DRA7XX=y
-CONFIG_PCI_DRA7XX_HOST=y
-CONFIG_PCI_DRA7XX_EP=y
-# CONFIG_PCIE_DW_PLAT_HOST is not set
-# CONFIG_PCIE_DW_PLAT_EP is not set
-# CONFIG_PCI_LAYERSCAPE is not set
-# CONFIG_PCI_LAYERSCAPE_EP is not set
-# CONFIG_PCI_MESON is not set
-# end of DesignWare PCI Core Support
-
-#
-# Mobiveil PCIe Core Support
-#
-# end of Mobiveil PCIe Core Support
-
-#
-# Cadence PCIe controllers support
+# Cadence-based PCIe controllers
 #
 # CONFIG_PCIE_CADENCE_PLAT_HOST is not set
 # CONFIG_PCIE_CADENCE_PLAT_EP is not set
 # CONFIG_PCI_J721E_HOST is not set
 # CONFIG_PCI_J721E_EP is not set
-# end of Cadence PCIe controllers support
+# end of Cadence-based PCIe controllers
+
+#
+# DesignWare-based PCIe controllers
+#
+CONFIG_PCIE_DW=y
+CONFIG_PCIE_DW_HOST=y
+CONFIG_PCIE_DW_EP=y
+# CONFIG_PCI_MESON is not set
+# CONFIG_PCI_LAYERSCAPE is not set
+# CONFIG_PCI_LAYERSCAPE_EP is not set
+# CONFIG_PCIE_DW_PLAT_HOST is not set
+# CONFIG_PCIE_DW_PLAT_EP is not set
+CONFIG_PCI_DRA7XX=y
+CONFIG_PCI_DRA7XX_HOST=y
+CONFIG_PCI_DRA7XX_EP=y
+# end of DesignWare-based PCIe controllers
+
+#
+# Mobiveil-based PCIe controllers
+#
+# end of Mobiveil-based PCIe controllers
 # end of PCI controller drivers
 
 #
@@ -1597,6 +1597,7 @@ CONFIG_REGMAP_IRQ=y
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_DMA_FENCE_TRACE is not set
 CONFIG_GENERIC_ARCH_TOPOLOGY=y
+# CONFIG_FW_DEVLINK_SYNC_STATE_TIMEOUT is not set
 # end of Generic Driver Options
 
 #
@@ -2002,7 +2003,6 @@ CONFIG_SATA_AHCI_PLATFORM=y
 CONFIG_AHCI_DM816=m
 # CONFIG_AHCI_DWC is not set
 # CONFIG_AHCI_CEVA is not set
-# CONFIG_AHCI_QORIQ is not set
 # CONFIG_SATA_INIC162X is not set
 # CONFIG_SATA_ACARD_AHCI is not set
 # CONFIG_SATA_SIL24 is not set
@@ -2186,9 +2186,6 @@ CONFIG_NET_VENDOR_GOOGLE=y
 # CONFIG_NET_VENDOR_HISILICON is not set
 CONFIG_NET_VENDOR_HUAWEI=y
 # CONFIG_NET_VENDOR_INTEL is not set
-CONFIG_NET_VENDOR_WANGXUN=y
-# CONFIG_NGBE is not set
-# CONFIG_TXGBE is not set
 # CONFIG_JME is not set
 CONFIG_NET_VENDOR_ADI=y
 # CONFIG_ADIN1110 is not set
@@ -2282,6 +2279,9 @@ CONFIG_TI_CPTS=y
 CONFIG_NET_VENDOR_VERTEXCOM=y
 # CONFIG_MSE102X is not set
 # CONFIG_NET_VENDOR_VIA is not set
+CONFIG_NET_VENDOR_WANGXUN=y
+# CONFIG_NGBE is not set
+# CONFIG_TXGBE is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
 CONFIG_NET_VENDOR_XILINX=y
 # CONFIG_XILINX_EMACLITE is not set
@@ -2322,11 +2322,13 @@ CONFIG_AX88796B_PHY=m
 # CONFIG_MAXLINEAR_GPHY is not set
 # CONFIG_MEDIATEK_GE_PHY is not set
 CONFIG_MICREL_PHY=y
+# CONFIG_MICROCHIP_T1S_PHY is not set
 # CONFIG_MICROCHIP_PHY is not set
 # CONFIG_MICROCHIP_T1_PHY is not set
 # CONFIG_MICROSEMI_PHY is not set
 # CONFIG_MOTORCOMM_PHY is not set
 # CONFIG_NATIONAL_PHY is not set
+# CONFIG_NXP_CBTX_PHY is not set
 # CONFIG_NXP_C45_TJA11XX_PHY is not set
 # CONFIG_NXP_TJA11XX_PHY is not set
 # CONFIG_NCN26000_PHY is not set
@@ -2353,6 +2355,7 @@ CONFIG_CAN_DEV=m
 # CONFIG_CAN_VXCAN is not set
 CONFIG_CAN_NETLINK=y
 CONFIG_CAN_CALC_BITTIMING=y
+# CONFIG_CAN_BXCAN is not set
 # CONFIG_CAN_CAN327 is not set
 # CONFIG_CAN_FLEXCAN is not set
 # CONFIG_CAN_GRCAN is not set
@@ -2506,6 +2509,7 @@ CONFIG_WLAN_VENDOR_BROADCOM=y
 # CONFIG_BRCMSMAC is not set
 # CONFIG_BRCMFMAC is not set
 CONFIG_WLAN_VENDOR_CISCO=y
+# CONFIG_AIRO is not set
 CONFIG_WLAN_VENDOR_INTEL=y
 # CONFIG_IPW2100 is not set
 # CONFIG_IPW2200 is not set
@@ -2587,8 +2591,8 @@ CONFIG_WLAN_VENDOR_ZYDAS=y
 # CONFIG_ZD1211RW is not set
 CONFIG_WLAN_VENDOR_QUANTENNA=y
 # CONFIG_QTNFMAC_PCIE is not set
-# CONFIG_MAC80211_HWSIM is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
+# CONFIG_MAC80211_HWSIM is not set
 # CONFIG_VIRT_WIFI is not set
 # CONFIG_WAN is not set
 
@@ -2706,6 +2710,7 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT=m
 # CONFIG_TOUCHSCREEN_MELFAS_MIP4 is not set
 # CONFIG_TOUCHSCREEN_MSG2638 is not set
 # CONFIG_TOUCHSCREEN_MTOUCH is not set
+# CONFIG_TOUCHSCREEN_NOVATEK_NVT_TS is not set
 # CONFIG_TOUCHSCREEN_IMAGIS is not set
 # CONFIG_TOUCHSCREEN_IMX6UL_TSC is not set
 # CONFIG_TOUCHSCREEN_INEXIO is not set
@@ -2980,7 +2985,6 @@ CONFIG_SPI_BITBANG=m
 # CONFIG_SPI_CADENCE_QUADSPI is not set
 # CONFIG_SPI_CADENCE_XSPI is not set
 # CONFIG_SPI_DESIGNWARE is not set
-# CONFIG_SPI_NXP_FLEXSPI is not set
 CONFIG_SPI_GPIO=m
 # CONFIG_SPI_FSL_SPI is not set
 # CONFIG_SPI_MICROCHIP_CORE is not set
@@ -2990,7 +2994,6 @@ CONFIG_SPI_OMAP24XX=y
 CONFIG_SPI_TI_QSPI=m
 # CONFIG_SPI_PCI1XXXX is not set
 # CONFIG_SPI_PXA2XX is not set
-# CONFIG_SPI_ROCKCHIP is not set
 # CONFIG_SPI_SC18IS602 is not set
 # CONFIG_SPI_SIFIVE is not set
 # CONFIG_SPI_SN_F_OSPI is not set
@@ -3077,7 +3080,6 @@ CONFIG_PINCTRL_SINGLE=y
 # end of Renesas pinctrl drivers
 
 CONFIG_PINCTRL_TI_IODELAY=y
-CONFIG_ARCH_HAVE_CUSTOM_GPIO_H=y
 CONFIG_GPIOLIB=y
 CONFIG_GPIOLIB_FASTPATH_LIMIT=512
 CONFIG_OF_GPIO=y
@@ -3114,6 +3116,7 @@ CONFIG_GPIO_OMAP=y
 # I2C GPIO expanders
 #
 # CONFIG_GPIO_ADNP is not set
+# CONFIG_GPIO_FXL6408 is not set
 # CONFIG_GPIO_GW_PLD is not set
 # CONFIG_GPIO_MAX7300 is not set
 # CONFIG_GPIO_MAX732X is not set
@@ -3529,6 +3532,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_BD9571MWV is not set
 # CONFIG_MFD_AXP20X_I2C is not set
 # CONFIG_MFD_MADERA is not set
+# CONFIG_MFD_MAX597X is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_MFD_DA9052_SPI is not set
 # CONFIG_MFD_DA9052_I2C is not set
@@ -3690,7 +3694,9 @@ CONFIG_REGULATOR_PBIAS=y
 # CONFIG_REGULATOR_PWM is not set
 # CONFIG_REGULATOR_RASPBERRYPI_TOUCHSCREEN_ATTINY is not set
 # CONFIG_REGULATOR_RT4801 is not set
+# CONFIG_REGULATOR_RT4803 is not set
 # CONFIG_REGULATOR_RT5190A is not set
+# CONFIG_REGULATOR_RT5739 is not set
 # CONFIG_REGULATOR_RT5759 is not set
 # CONFIG_REGULATOR_RT6160 is not set
 # CONFIG_REGULATOR_RT6190 is not set
@@ -3974,15 +3980,12 @@ CONFIG_VIDEO_APTINA_PLL=m
 # CONFIG_VIDEO_IMX412 is not set
 # CONFIG_VIDEO_IMX415 is not set
 # CONFIG_VIDEO_MT9M001 is not set
-# CONFIG_VIDEO_MT9M032 is not set
 # CONFIG_VIDEO_MT9M111 is not set
 CONFIG_VIDEO_MT9P031=m
-# CONFIG_VIDEO_MT9T001 is not set
 # CONFIG_VIDEO_MT9T112 is not set
 # CONFIG_VIDEO_MT9V011 is not set
 # CONFIG_VIDEO_MT9V032 is not set
 # CONFIG_VIDEO_MT9V111 is not set
-# CONFIG_VIDEO_NOON010PC30 is not set
 # CONFIG_VIDEO_OG01A1B is not set
 # CONFIG_VIDEO_OV02A10 is not set
 # CONFIG_VIDEO_OV08D10 is not set
@@ -4020,13 +4023,9 @@ CONFIG_VIDEO_MT9P031=m
 # CONFIG_VIDEO_S5C73M3 is not set
 # CONFIG_VIDEO_S5K5BAF is not set
 # CONFIG_VIDEO_S5K6A3 is not set
-# CONFIG_VIDEO_S5K6AA is not set
-# CONFIG_VIDEO_SR030PC30 is not set
 # CONFIG_VIDEO_ST_VGXY61 is not set
-# CONFIG_VIDEO_VS6624 is not set
 # CONFIG_VIDEO_CCS is not set
 # CONFIG_VIDEO_ET8EK8 is not set
-# CONFIG_VIDEO_M5MOLS is not set
 # end of Camera sensor devices
 
 #
@@ -4111,7 +4110,6 @@ CONFIG_VIDEO_TVP5150=m
 #
 # Video encoders
 #
-# CONFIG_VIDEO_AD9389B is not set
 # CONFIG_VIDEO_ADV7170 is not set
 # CONFIG_VIDEO_ADV7175 is not set
 # CONFIG_VIDEO_ADV7343 is not set
@@ -4367,8 +4365,8 @@ CONFIG_DVB_SP2=m
 #
 # Graphics support
 #
+CONFIG_VIDEO_CMDLINE=y
 CONFIG_VIDEO_NOMODESET=y
-# CONFIG_IMX_IPUV3_CORE is not set
 CONFIG_DRM=m
 CONFIG_DRM_MIPI_DSI=y
 CONFIG_DRM_KMS_HELPER=m
@@ -4407,7 +4405,6 @@ CONFIG_DRM_I2C_NXP_TDA998X=m
 # CONFIG_DRM_NOUVEAU is not set
 # CONFIG_DRM_VGEM is not set
 # CONFIG_DRM_VKMS is not set
-# CONFIG_DRM_EXYNOS is not set
 # CONFIG_DRM_UDL is not set
 # CONFIG_DRM_AST is not set
 # CONFIG_DRM_MGAG200 is not set
@@ -4429,7 +4426,6 @@ CONFIG_DRM_TILCDC=m
 # CONFIG_DRM_QXL is not set
 # CONFIG_DRM_VIRTIO_GPU is not set
 # CONFIG_DRM_FSL_DCU is not set
-# CONFIG_DRM_STM is not set
 CONFIG_DRM_PANEL=y
 
 #
@@ -4466,12 +4462,14 @@ CONFIG_DRM_PANEL_EDP=m
 # CONFIG_DRM_PANEL_SAMSUNG_LD9040 is not set
 CONFIG_DRM_PANEL_LG_LB035Q02=m
 # CONFIG_DRM_PANEL_LG_LG4573 is not set
+# CONFIG_DRM_PANEL_MAGNACHIP_D53E6EA8966 is not set
 CONFIG_DRM_PANEL_NEC_NL8048HL11=m
 # CONFIG_DRM_PANEL_NEWVISION_NV3051D is not set
 # CONFIG_DRM_PANEL_NEWVISION_NV3052C is not set
 # CONFIG_DRM_PANEL_NOVATEK_NT35510 is not set
 # CONFIG_DRM_PANEL_NOVATEK_NT35560 is not set
 # CONFIG_DRM_PANEL_NOVATEK_NT35950 is not set
+# CONFIG_DRM_PANEL_NOVATEK_NT36523 is not set
 # CONFIG_DRM_PANEL_NOVATEK_NT36672A is not set
 # CONFIG_DRM_PANEL_NOVATEK_NT39016 is not set
 # CONFIG_DRM_PANEL_MANTIX_MLAF057WE51 is not set
@@ -4503,6 +4501,7 @@ CONFIG_DRM_PANEL_SHARP_LS037V7DW01=m
 # CONFIG_DRM_PANEL_SITRONIX_ST7703 is not set
 # CONFIG_DRM_PANEL_SITRONIX_ST7789V is not set
 CONFIG_DRM_PANEL_SONY_ACX565AKM=m
+# CONFIG_DRM_PANEL_SONY_TD4353_JDI is not set
 # CONFIG_DRM_PANEL_SONY_TULIP_TRULY_NT35521 is not set
 # CONFIG_DRM_PANEL_TDO_TL070WSH30 is not set
 CONFIG_DRM_PANEL_TPO_TD028TTEC1=m
@@ -4536,6 +4535,7 @@ CONFIG_DRM_DISPLAY_CONNECTOR=m
 # CONFIG_DRM_NXP_PTN3460 is not set
 # CONFIG_DRM_PARADE_PS8622 is not set
 # CONFIG_DRM_PARADE_PS8640 is not set
+# CONFIG_DRM_SAMSUNG_DSIM is not set
 # CONFIG_DRM_SIL_SII8620 is not set
 # CONFIG_DRM_SII902X is not set
 # CONFIG_DRM_SII9234 is not set
@@ -4559,7 +4559,6 @@ CONFIG_DRM_TI_TPD12S015=m
 # CONFIG_DRM_CDNS_MHDP8546 is not set
 # end of Display Interface Bridges
 
-# CONFIG_DRM_STI is not set
 # CONFIG_DRM_ETNAVIV is not set
 # CONFIG_DRM_LOGICVC is not set
 # CONFIG_DRM_ARCPGU is not set
@@ -4590,7 +4589,6 @@ CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=m
 #
 # Frame buffer Devices
 #
-CONFIG_FB_CMDLINE=y
 CONFIG_FB_NOTIFY=y
 CONFIG_FB=y
 CONFIG_FIRMWARE_EDID=y
@@ -4924,6 +4922,8 @@ CONFIG_SND_SOC_CPCAP=m
 # CONFIG_SND_SOC_CS35L41_I2C is not set
 # CONFIG_SND_SOC_CS35L45_SPI is not set
 # CONFIG_SND_SOC_CS35L45_I2C is not set
+# CONFIG_SND_SOC_CS35L56_I2C is not set
+# CONFIG_SND_SOC_CS35L56_SPI is not set
 # CONFIG_SND_SOC_CS42L42 is not set
 # CONFIG_SND_SOC_CS42L51_I2C is not set
 # CONFIG_SND_SOC_CS42L52 is not set
@@ -4956,6 +4956,7 @@ CONFIG_SND_SOC_HDMI_CODEC=m
 # CONFIG_SND_SOC_IDT821034 is not set
 # CONFIG_SND_SOC_INNO_RK3036 is not set
 # CONFIG_SND_SOC_MAX98088 is not set
+# CONFIG_SND_SOC_MAX98090 is not set
 # CONFIG_SND_SOC_MAX98357A is not set
 # CONFIG_SND_SOC_MAX98504 is not set
 # CONFIG_SND_SOC_MAX9867 is not set
@@ -5419,7 +5420,6 @@ CONFIG_USB_SERIAL_OPTION=m
 # CONFIG_USB_CYPRESS_CY7C63 is not set
 # CONFIG_USB_CYTHERM is not set
 # CONFIG_USB_IDMOUSE is not set
-# CONFIG_USB_FTDI_ELAN is not set
 # CONFIG_USB_APPLEDISPLAY is not set
 # CONFIG_APPLE_MFI_FASTCHARGE is not set
 # CONFIG_USB_SISUSBVGA is not set
@@ -5626,6 +5626,7 @@ CONFIG_LEDS_PCA963X=m
 # CONFIG_LEDS_DAC124S085 is not set
 CONFIG_LEDS_PWM=m
 # CONFIG_LEDS_REGULATOR is not set
+# CONFIG_LEDS_BD2606MVV is not set
 # CONFIG_LEDS_BD2802 is not set
 # CONFIG_LEDS_LT3593 is not set
 # CONFIG_LEDS_TCA6507 is not set
@@ -5663,7 +5664,6 @@ CONFIG_LEDS_TRIGGER_HEARTBEAT=m
 CONFIG_LEDS_TRIGGER_BACKLIGHT=m
 CONFIG_LEDS_TRIGGER_CPU=y
 # CONFIG_LEDS_TRIGGER_ACTIVITY is not set
-CONFIG_LEDS_TRIGGER_GPIO=m
 CONFIG_LEDS_TRIGGER_DEFAULT_ON=m
 
 #
@@ -5903,6 +5903,7 @@ CONFIG_CLK_TWL6040=m
 CONFIG_COMMON_CLK_PALMAS=m
 # CONFIG_COMMON_CLK_PWM is not set
 # CONFIG_COMMON_CLK_RS9_PCIE is not set
+# CONFIG_COMMON_CLK_SI521XX is not set
 # CONFIG_COMMON_CLK_VC5 is not set
 # CONFIG_COMMON_CLK_VC7 is not set
 # CONFIG_COMMON_CLK_FIXED_MMIO is not set
@@ -6169,6 +6170,7 @@ CONFIG_INA2XX_ADC=m
 # CONFIG_TI_ADC161S626 is not set
 # CONFIG_TI_ADS1015 is not set
 # CONFIG_TI_ADS7924 is not set
+# CONFIG_TI_ADS1100 is not set
 # CONFIG_TI_ADS7950 is not set
 # CONFIG_TI_ADS8344 is not set
 # CONFIG_TI_ADS8688 is not set
@@ -6416,6 +6418,7 @@ CONFIG_IIO_ST_SENSORS_CORE=m
 CONFIG_SENSORS_ISL29028=m
 # CONFIG_ISL29125 is not set
 # CONFIG_JSA1212 is not set
+# CONFIG_ROHM_BU27034 is not set
 # CONFIG_RPR0521 is not set
 # CONFIG_LTR501 is not set
 # CONFIG_LTRF216A is not set
@@ -6656,6 +6659,7 @@ CONFIG_PHY_TI_GMII_SEL=y
 # CONFIG_ARM_CCI_PMU is not set
 # CONFIG_ARM_CCN is not set
 CONFIG_ARM_PMU=y
+# CONFIG_ARM_PMUV3 is not set
 # end of Performance monitor support
 
 # CONFIG_RAS is not set
@@ -6670,6 +6674,14 @@ CONFIG_ARM_PMU=y
 # CONFIG_DAX is not set
 CONFIG_NVMEM=y
 CONFIG_NVMEM_SYSFS=y
+
+#
+# Layout Types
+#
+# CONFIG_NVMEM_LAYOUT_SL28_VPD is not set
+# CONFIG_NVMEM_LAYOUT_ONIE_TLV is not set
+# end of Layout Types
+
 # CONFIG_NVMEM_RMEM is not set
 # CONFIG_NVMEM_U_BOOT_ENV is not set
 
@@ -6736,7 +6748,6 @@ CONFIG_FANOTIFY=y
 # CONFIG_FANOTIFY_ACCESS_PERMISSIONS is not set
 CONFIG_QUOTA=y
 # CONFIG_QUOTA_NETLINK_INTERFACE is not set
-CONFIG_PRINT_QUOTA_WARNING=y
 # CONFIG_QUOTA_DEBUG is not set
 CONFIG_QUOTA_TREE=y
 # CONFIG_QFMT_V1 is not set
@@ -6841,7 +6852,6 @@ CONFIG_CRAMFS_BLOCKDEV=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 # CONFIG_EROFS_FS is not set
-# CONFIG_AUFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_NFS_FS=y
 CONFIG_NFS_V2=y
@@ -6957,7 +6967,7 @@ CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 CONFIG_DEFAULT_SECURITY_DAC=y
-CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,integrity,bpf"
+CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,bpf"
 
 #
 # Kernel hardening options
@@ -7295,6 +7305,7 @@ CONFIG_TEXTSEARCH_FSM=m
 CONFIG_XARRAY_MULTI=y
 CONFIG_ASSOCIATIVE_ARRAY=y
 CONFIG_HAS_IOMEM=y
+CONFIG_HAS_IOPORT=y
 CONFIG_HAS_IOPORT_MAP=y
 CONFIG_HAS_DMA=y
 CONFIG_DMA_OPS=y
@@ -7395,6 +7406,8 @@ CONFIG_DEBUG_INFO_DWARF4=y
 CONFIG_DEBUG_INFO_COMPRESSED_NONE=y
 # CONFIG_DEBUG_INFO_COMPRESSED_ZLIB is not set
 CONFIG_DEBUG_INFO_SPLIT=y
+CONFIG_PAHOLE_HAS_SPLIT_BTF=y
+CONFIG_PAHOLE_HAS_LANG_EXCLUDE=y
 # CONFIG_GDB_SCRIPTS is not set
 CONFIG_FRAME_WARN=1024
 # CONFIG_STRIP_ASM_SYMS is not set
@@ -7579,6 +7592,7 @@ CONFIG_UPROBE_EVENTS=y
 CONFIG_DYNAMIC_EVENTS=y
 CONFIG_PROBE_EVENTS=y
 # CONFIG_SYNTH_EVENTS is not set
+# CONFIG_USER_EVENTS is not set
 # CONFIG_HIST_TRIGGERS is not set
 # CONFIG_TRACE_EVENT_INJECT is not set
 # CONFIG_TRACEPOINT_BENCHMARK is not set
