--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 image: robertcnelson/debian-bookworm-slim-ti-linux-kernel-dev:latest
 
 cache:
-  key: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH"
+  key: "$CI_PROJECT_NAME-am33x-v6.1"
   paths:
     - dl
-    - ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz
+    - ccache-$CI_PROJECT_NAME-am33x-v6.1.tar.gz
 
 build:
   tags:
@@ -14,7 +14,7 @@ build:
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
     - ccache -s
-    - tar -xf ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz -C / || true
+    - tar -xf ccache-$CI_PROJECT_NAME-am33x-v6.1.tar.gz -C / || true
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
@@ -26,7 +26,7 @@ build:
     - tar -cf ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz /root/.cache/ccache/
   artifacts:
     expire_in: 5 days
-    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
+    name: "$CI_PROJECT_NAME-am33x-v6.1-$CI_JOB_ID"
     paths:
       - "deploy/linux-image-*.deb"
 
