--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
-image: robertcnelson/debian-bookworm-slim-ti-linux-kernel-dev:latest
+image: robertcnelson/beagle-devscripts-kernel-debian-12-amd64
+# https://git.beagleboard.org/beagleboard/ci-docker-images
 
 cache:
   key: "$CI_PROJECT_NAME-am33x-rt-v5.10"
   paths:
     - dl/*.tar.xz
-    - ccache.tar.gz
+    - ccache.tar.lz4
 
 build:
   tags:
@@ -14,8 +15,7 @@ build:
     - sed -i -e 's:gcc_10_arm:gcc_13_arm:g' version.sh
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
-    - ccache -s
-    - tar -xf ccache.tar.gz -C / || true
+    - tar --use-compress-program=lz4 -xf ccache.tar.lz4 -C / || true
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
@@ -24,7 +24,7 @@ build:
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
-    - tar -cf ccache.tar.gz /root/.cache/ccache/
+    - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
   artifacts:
     expire_in: 28 days
     name: "$CI_PROJECT_NAME-am33x-rt-v5.10-$CI_JOB_ID"
